--- a/wwwRoot/Css/Style.css
+++ b/wwwRoot/Css/Style.css
@@ -6,6 +6,6 @@
 .backgroundPri{
     background-color: #83C689;
 }
-/*.headerStyle{
-    color: #fff !important;
-}*/
+.backgroundSec{
+    background-color: #6A7698;
+}
